030-software/fluxcd/apps/freellmapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freellmapi
spec:
  selector:
    app: freellmapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
